--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-jest": "^24.9.0",
     "eslint": "^7.1.0",
     "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-airbnb-typescript": "^7.2.1",
     "eslint-config-prettier": "^6.11.0",
     "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-import": "^2.20.1",
